--- a/build.gradle
+++ b/build.gradle
@@ -1,13 +1,27 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    ext.kotlin_version = '1.2.30'
     repositories {
         google()
         jcenter()
     }
+    project.ext {
+        kotlin_version = "1.2.61"
+        minSdkVersion = 19
+        compileSdkVersion = 28
+        targetSdkVersion = 28
+        buildToolsVersion = "27.0.3"
+
+        support_lib_version = "28.0.0-rc02"
+        android_architecture_version = "1.1.1"
+        constraint_layout_version = "1.1.3"
+        junit_version = "4.12"
+        test_runner = "1.0.2"
+        espresso_core = "3.0.2"
+    }
+
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.1.3'
+        classpath 'com.android.tools.build:gradle:3.1.4'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
 
         // NOTE: Do not place your application dependencies here; they belong
